src/scss/_custom.scss
// Here you can add other styles
.sidebar-brand {
  justify-content: left !important;
}
.header {
  --cui-header-padding-x: 0rem !important;
}
.card-deck {
  margin-bottom: 20px;
}
.new-settings-box {
  padding: 0;
  border: solid 1px #eceef3;
}
.new-settings-menu {
  position: relative;
  width: 100%;
  height: 55px;
  border-bottom: 1px solid #eceef3;
  display: flex;
  width: 100%;
  margin-top: -20px;
}
.new-settings-menu ::-webkit-scrollbar {
  display: none;
}
.new-settings-menu div {
  margin-left: 40px;
}
.new-settings-menu div:first-child {
  margin-left: 0;
}
.new-settings-menu div a {
  font-family: 'Source Sans Pro', sans-serif;
  text-transform: capitalize;
  font-size: 14px;
  color: #4f6d85;
  border-left: 0;
  font-weight: 600;
  height: 55px;
  display: flex;
  align-items: center;
  padding: 0;
  border-bottom: none;
  text-decoration: none;
  white-space: nowrap;
}
.new-settings-menu div a:hover {
  color: #00bfcc;
}

.new-settings-menu ul li:hover {
  background: none;
}

.new-settings-menu div .active {
  border: 0;
  border-bottom: 1px solid #00bfcc;
  color: #00bfcc;
}

.new-settings-body {
  border: 0;
  margin: 0;
  position: relative;
}

.new-settings-menu ::-webkit-scrollbar,
.new-settings-menu ::-moz-scrollbar {
  display: none;
}
.new-settings-menu .menu-list {
  display: flex;
  width: 100%;
  overflow-x: scroll;
  overflow-y: hidden;
  -ms-overflow-style: none;
  overflow: -moz-scrollbars-none;
  position: relative;
  height: 100px;
}
.new-settings-menu > .menu-list > div:first-child {
  margin-left: 0;
  border-bottom: 1px solid #eceef3;
}
.new-settings-menu .menu-list div {
  padding: 0 0px;
}
.new-settings-menu > .menu-list div a {
  font-family: 'Roboto', sans-serif;
  text-transform: capitalize;
  font-size: 14px;
  color: #4f6d85;
  border-left: 0;
  font-weight: 600;
  height: 55px;
  display: flex;
  align-items: center;
  border-bottom: 1px solid rgba(0, 0, 0, 0);
  text-decoration: none;
  white-space: nowrap;
}
.new-settings-menu .menu-list div a:hover {
  color: #00bfcc;
}
.new-settings-menu .menu-list div a.active {
  color: #00bfcc;
  border-bottom-color: #00bfcc;
}

.full-page-container {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.card-container {
  flex: 1;
  padding: 20px;
  overflow-y: auto;
}

.custom-card {
  background-color: #fff;
  border: 1px solid #ddd;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.custom-button {
  background-color: #007bff;
  color: #fff;
}

.custom-table {
  border-collapse: collapse;
  width: 100%;
}

.custom-table th,
.custom-table td {
  padding: 12px;
  text-align: left;
  border-bottom: 1px solid #ddd;
}

td {
  border: 0px;
}

.request-red {
  background-color: rgba(255, 68, 51, 0.1);
  cursor: default;
  width: 120px;
  text-align: center;
  border-radius: 3px;
  border: 0px;
  color: rgba(255, 68, 51);
}

.request-green {
  background-color: rgba(0, 128, 0, 0.1);
  color: rgba(0, 128, 0, 0.9);
  width: 120px;
  text-align: center;
  border-radius: 3px;
  border: 0px;
  cursor: default;
}

.request-gray {
  background-color: rgb(128, 128, 128, 0.1);
  color: rgb(128, 128, 128, 1);
  width: 120px;
  text-align: center;
  border-radius: 3px;
  border: 0px;
  cursor: default;
}
.request-orange {
  background-color: rgba(255, 121, 0, 0.2);
  color: rgb(255, 121, 0);
  width: 120px;
  text-align: center;
  border-radius: 3px;
  border: 0px;
  cursor: default;
}

.comment-section {
  height: 200px;
  overflow: scroll;
}

.transparent-bg {
  background-color: transparent !important;
}

.resident-unit-dropdown::after {
  content: '';
  display: none;
}

.logo-img {
  width: 50px;
}

.d-flex-center {
  display: flex;
  align-items: center;
  justify-content: center;
}

.monospace-font {
  font-family: 'Source Sans Pro', sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue';
}

.color-red {
  color: #ff594a;
}
.color-green {
  color: #26c281;
}

.color-gray {
  color: #a9a9a9;
}

